// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Label checkGrammar 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkGrammar 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkGrammar 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkGrammar 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkHighlight 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkHighlight 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkHighlight 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkHighlight 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkSpaces 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkSpaces 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkSpaces 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label checkSpaces 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label className 1`] = `
<span
  className="uu5-bricks-label my-classname uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 1`] = `
<span
  className="color-schema-default uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 2`] = `
<span
  className="color-schema-red uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 3`] = `
<span
  className="color-schema-red uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 4`] = `
<span
  className="color-schema-red-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 5`] = `
<span
  className="color-schema-red-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 6`] = `
<span
  className="color-schema-green uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 7`] = `
<span
  className="color-schema-green uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 8`] = `
<span
  className="color-schema-green-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 9`] = `
<span
  className="color-schema-green-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 10`] = `
<span
  className="color-schema-yellow uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 11`] = `
<span
  className="color-schema-yellow uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 12`] = `
<span
  className="color-schema-yellow-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 13`] = `
<span
  className="color-schema-yellow-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 14`] = `
<span
  className="color-schema-purple uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 15`] = `
<span
  className="color-schema-purple uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 16`] = `
<span
  className="color-schema-purple-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 17`] = `
<span
  className="color-schema-purple-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 18`] = `
<span
  className="color-schema-brown uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 19`] = `
<span
  className="color-schema-brown uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 20`] = `
<span
  className="color-schema-brown-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 21`] = `
<span
  className="color-schema-brown-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 22`] = `
<span
  className="color-schema-orange uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 23`] = `
<span
  className="color-schema-orange uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 24`] = `
<span
  className="color-schema-orange-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 25`] = `
<span
  className="color-schema-orange-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 26`] = `
<span
  className="color-schema-cyan uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 27`] = `
<span
  className="color-schema-cyan uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 28`] = `
<span
  className="color-schema-cyan-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 29`] = `
<span
  className="color-schema-cyan-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 30`] = `
<span
  className="color-schema-grey uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 31`] = `
<span
  className="color-schema-grey uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 32`] = `
<span
  className="color-schema-grey-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 33`] = `
<span
  className="color-schema-grey-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 34`] = `
<span
  className="color-schema-pink uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 35`] = `
<span
  className="color-schema-pink uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 36`] = `
<span
  className="color-schema-pink-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 37`] = `
<span
  className="color-schema-pink-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema 38`] = `
<span
  className="color-schema-pink uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label content 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label content 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label content 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label content 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label controlled 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label controlled 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label controlled 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label controlled 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label default props 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label disabled 1`] = `
<span
  className="uu5-bricks-label uu5-common-disabled uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Label disabled 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label disabled 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label disabled 4`] = `
<span
  className="uu5-bricks-label uu5-common-disabled uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Label docKit examples UU5.Bricks.Label should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <h1
    key="uu5-content-0"
  >
    <Label
      bgStyle="filled"
      borderRadius={null}
      className={null}
      colorSchema="info"
      content="Beginner"
      controlled={true}
      disabled={false}
      dynamic={false}
      elevation={null}
      elevationHover={null}
      hidden={false}
      icon={null}
      iconAlign="right"
      iconOnClick={null}
      id="uuID02"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      onClick={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </h1>
  <h2
    key="uu5-content-1"
  >
    <Label
      bgStyle="filled"
      borderRadius={null}
      className={null}
      colorSchema="danger"
      content="Intermediate"
      controlled={true}
      disabled={false}
      dynamic={false}
      elevation={null}
      elevationHover={null}
      hidden={false}
      icon={null}
      iconAlign="right"
      iconOnClick={null}
      id="uuID03"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      onClick={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </h2>
  <h3
    key="uu5-content-2"
  >
    <Label
      bgStyle="filled"
      borderRadius={null}
      className={null}
      colorSchema="warning"
      content="Upper intermediate"
      controlled={true}
      disabled={false}
      dynamic={false}
      elevation={null}
      elevationHover={null}
      hidden={false}
      icon={null}
      iconAlign="right"
      iconOnClick={null}
      id="uuID04"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      onClick={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </h3>
  <h4
    key="uu5-content-3"
  >
    <Label
      bgStyle="filled"
      borderRadius={null}
      className={null}
      colorSchema="success"
      content="Advanced"
      controlled={true}
      disabled={false}
      dynamic={false}
      elevation={null}
      elevationHover={null}
      hidden={false}
      icon={null}
      iconAlign="right"
      iconOnClick={null}
      id="uuID05"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      onClick={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </h4>
</div>
`;

exports[`UU5.Bricks.Label dynamic 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label dynamic 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label dynamic 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label dynamic 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label hidden 1`] = `
<span
  className="uu5-bricks-label uu5-common-hidden uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label hidden 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label hidden 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label hidden 4`] = `
<span
  className="uu5-bricks-label uu5-common-hidden uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label id 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="myId"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="myId_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label ignoreHTML 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label ignoreHTML 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label ignoreHTML 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label ignoreHTML 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label mainAttrs 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label name 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 5`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 6`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 7`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 8`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 9`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 10`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 11`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 12`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 13`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 14`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 15`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 16`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 17`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 18`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 19`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel 20`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label noIndex 1`] = `
<span
  className="uu5-bricks-label uu5-noindex uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label noIndex 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label noIndex 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label noIndex 4`] = `
<span
  className="uu5-bricks-label uu5-noindex uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label pureRender 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label pureRender 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label pureRender 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label pureRender 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label selected 1`] = `
<span
  className="uu5-bricks-label uu5-common-selected uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label selected 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label selected 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label selected 4`] = `
<span
  className="uu5-bricks-label uu5-common-selected uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label style 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label style 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label style 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label style 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label textCorrector 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label textCorrector 2`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label textCorrector 3`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label textCorrector 4`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.Label tooltip 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Icon
    authenticate={false}
    className={null}
    clickable={true}
    controlled={true}
    disabled={false}
    hidden={false}
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    src=""
    style={null}
    tooltip={null}
  />
</span>
`;
